Added all UI components, flushing them needed

--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer row">
+            <div class="col-md-4" id="counter" style="position:relative;">
+                <!-- <img src="img/clock.png" alt="Digital Clock" srcset="" class="clock"> -->
+                <img src="img/clock.png" alt="clock" class="clock">
+                <p id="timer"> 7 : 12</p>
+            </div>
+            <div class="col-md-4">
+                <p>Hello - Adele</p>
+                <p><i class="fa-solid fa-backward-step"></i> <i class="fa-regular fa-circle-pause"></i> <i class="fa-solid fa-forward-step"></i></p>
+            </div>
+            <div class="col-md-4" id="weather">
+                Weather
+            </div>
+        </div>
+
     </div>
 
     <script src="index.js"></script>
